--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-linkify": "^0.2.2",
+    "record-screen": "^3.11.0",
     "semver": "^6.3.0",
     "string-math": "^1.2.1",
     "tempy": "^0.3.0",
